# ha-climate-relay

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md  release-plan.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-ci.yml  release-alpha-prerelease.yml  release-beta-prerelease.yml
custom_components/climate_relay_core/: __init__.py  climate.py  config_flow.py  const.py  frontend_api.py  manifest.json  room_config.py  room_management.py  runtime.py  select.py  services.yaml  strings.json
docs/: architecture.md  config-subentries-evaluation.md  developer-guide.md  discovery.md  engineering-standards.md  epic-1.md  frontend-backend-contract-spike.md  frontend-backend-contract.md  frontend-interaction-model.md  frontend-repository-strategy.md  ha-automation-strategy.md  implementation-plan.md  increment-3-3-gui-gaps.md  options-flow-room-config-migration-plan.md  product-ux-requirements-addendum.md  product-ux-verification-addendum.md  product-ux-vision.md  release-policy.md  requirements.md  rules.md  verification-matrix.md
docs/gui-smoke-suites/: README.md  epic-1.md  iteration-1.1.md  iteration-1.2.md  iteration-1.3.md  iteration-1.4.md  template.md
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: backend-api.test.ts  (+7 more)
scripts/: ha_prepare_no_area_fixture.py  ha_prepare_test_instance.py  ha_smoke_test.py  run_epic_acceptance.py  run_iteration_acceptance.py
tests/: conftest.py
(+22 files in other folders)
